REGRESSION (r129478-r129480): http/tests/loading/text-content-type-with-binary-extension.html failing on Apple MountainLion Debug WK2 (Tests) https://bugs.webkit.org/show_bug.cgi?id=98527

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-10-11
Reviewed by Kenneth Rohde Christiansen.

Tools:

Added decidePolicyForResponse callback for WTR PagePolicyClient.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::initialize):
(WTR::TestController::decidePolicyForResponse):
(WTR):
* WebKitTestRunner/TestController.h:
(TestController):

LayoutTests:

Rebased http/tests/loading/text-content-type-with-binary-extension.html for WK2 EFL, as dumping order is affected.
Other WK2 ports will have to do the same.

* platform/efl-wk2/http/tests/loading/text-content-type-with-binary-extension-expected.txt: Added.
* platform/gtk-wk2/TestExpectations:
* platform/mac-wk2/TestExpectations:
* platform/qt-5.0-wk2/TestExpectations:

Canonical link: https://commits.webkit.org/117027@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131057 268f45cc-cd09-0410-ab3c-d52691b4dbfc